#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(sumire, 0.3.0, syata@acm.org)
AC_CONFIG_SRCDIR([include/sumire/int-types.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_LANG_CPLUSPLUS

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile include/Makefile src/Makefile test/Makefile])
AC_OUTPUT
